--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blank",
+  "name": "rlg_generator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -21,6 +21,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
     "browserify": "^17.0.0",
+    "d3": "^7.8.4",
     "express": "^4.12.3",
     "express-cors": "^0.0.3",
     "gulp": "^4.0.2",
