--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-react": "^7.18.6",
     "browserify": "^17.0.0",
     "d3": "^7.8.4",
+    "d3-scale": "^4.0.2",
     "express": "^4.12.3",
     "express-cors": "^0.0.3",
     "gulp": "^4.0.2",
