--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "path": "^0.12.7",
     "prop-types": "^15.6.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
